--- a/api-assignment.04/assets/styles/index.css
+++ b/api-assignment.04/assets/styles/index.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+body {
+  background-color: rgb(22, 27, 62);
+}
 .container {
   width: min(100% - 30px, 1080px);
   margin-inline: auto;
