--- a/api-assignment.04/assets/styles/index.css
+++ b/api-assignment.04/assets/styles/index.css
@@ -1,15 +1,50 @@
 @charset "utf-8";
 
 body {
-  background-color: rgb(22, 27, 62);
+  background-color: rgb(209, 209, 209);
+  font-family: arial, sans-serif;
 }
+
 .container {
   width: min(100% - 30px, 1080px);
   margin-inline: auto;
 }
 
-ul li {
-  list-style: none;
+header {
   display: flex;
   justify-content: space-between;
+  color: rgb(22, 99, 254);
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: 20px;
+}
+
+header h1 {
+  margin: 0;
+  margin-left: 0;
+  font-weight: 800;
+}
+
+header ul {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  font-weight: 550;
+  margin-left: 400px;
+}
+
+button {
+  background-color: rgb(22, 99, 254);
+  color: #fff;
+  padding: 7px 15px;
+  border-radius: 5px;
+  margin-right: 40px;
+  font-weight: 550;
+  border: none;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: rgb(0, 126, 251);
 }
