--- a/api-assignment.04/assets/styles/index.css
+++ b/api-assignment.04/assets/styles/index.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 body {
-  background-color: rgb(209, 209, 209);
+  background-color: rgb(225, 236, 255);
   font-family: arial, sans-serif;
 }
 
@@ -13,7 +13,6 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  color: rgb(22, 99, 254);
   align-items: center;
   width: 100%;
   box-sizing: border-box;
@@ -24,27 +23,44 @@ header h1 {
   margin: 0;
   margin-left: 0;
   font-weight: 800;
+  color: rgb(58, 36, 250);
 }
 
 header ul {
   display: flex;
   list-style: none;
   gap: 20px;
-  font-weight: 550;
   margin-left: 400px;
 }
 
-button {
-  background-color: rgb(22, 99, 254);
+header button {
+  background-color: rgb(58, 36, 250);
   color: #fff;
-  padding: 7px 15px;
+  padding: 8px 20px;
   border-radius: 5px;
   margin-right: 40px;
-  font-weight: 550;
   border: none;
+  text-align: center;
+  font-size: 15px;
 }
 
 button:hover {
   cursor: pointer;
-  background-color: rgb(0, 126, 251);
+  background-color: rgb(0, 85, 255);
+}
+
+main {
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+main button {
+  background-color: rgb(58, 36, 250);
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  margin: 0;
+  padding: 5px 5px;
+
 }
