--- a/api-assignment.04/assets/styles/index.css
+++ b/api-assignment.04/assets/styles/index.css
@@ -20,6 +20,10 @@ header {
 }
 
 header h1 {
+  font-family: "Lilita One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 40px;
   margin: 0;
   margin-left: 0;
   font-weight: 800;
