--- a/api-assignment.04/assets/styles/index.css
+++ b/api-assignment.04/assets/styles/index.css
@@ -57,6 +57,8 @@ main {
   margin-top: 100px;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 main button {
