--- a/api-assignment.04/assets/styles/index.css
+++ b/api-assignment.04/assets/styles/index.css
@@ -55,10 +55,7 @@ button:hover {
 
 main {
   margin-top: 100px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
 }
 
 main button {
@@ -68,5 +65,12 @@ main button {
   border: none;
   margin: 0;
   padding: 5px 5px;
+}
 
+#location {
+    width: 100%;
+    height: 500px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    display: none; 
 }
